@@ -35,6 +35,7 @@
         <a href="screenshots.html"> <img src="data/images/cheese-big.png" alt="cheese!"/> </a>
       </div><!-- top -->
 
+      <!--
       <div id="warningbox">
         <p>
         Dear Cheese user!<br/>
@@ -50,6 +51,7 @@
 
         </p>
       </div>
+      -->
 
       <div id="bottom">
         <div id="bottomLeft">
@@ -211,6 +213,14 @@
 
         <div id="bottomRight">
           <h2>News</h2>
+          <h3>December 7th 2007</h3>
+          <p>
+          Say cheese! Or maybe that’s Cheese? Either way, take a look at
+          <a href="http://www.gnomejournal.org/article/60/an-interview-with-daniel-g-siegel"> this interview</a>
+          by Sayamindu Dasgupta with daniel g. siegel, the main author of
+          Cheese
+          </p>
+
           <h3>November 18th 2007</h3>
           <p>
           We are working very hard on the next Cheese version. Cheese was quite
@@ -279,12 +289,6 @@
           <p>
           Cheese 0.1.3 was released. <a href="download.html">Get it!</a>
           </p>
-
-          <h3>July 1st 2007</h3>
-          <p>
-          Cheese 0.1.2 was released. <a href="download.html">Get it!</a>
-          </p>
-
 
         </div>
       </div><!-- bottom -->
