@@ -1,3 +1,8 @@
+2007-12-07  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/index.html: 
+	  add a new news entry on cheese, remove the banner
+
 2007-12-06  Jonny Lamb  <jonnylamb@jonnylamb.com>
 
 	* www.gnome.org/projects/index.wml: Added Conduit to project list.
